# powerbeacon

./: .dockerignore  .env  .env.example  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  LICENCE  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  example.compose.yml  nginx.conf  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: agent-runtime.instructions.md  backend-routes.instructions.md  frontend-api.instructions.md
agent/: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  DOCKER_INTEGRATION.md  Dockerfile  Makefile  QUICKSTART.md  README.md  build.ps1  build.sh  go.mod
backend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  main.py  pyproject.toml  requirements.txt
backend/powerbeacon/core/: config.py  db.py  deps.py  security.py
backend/powerbeacon/crud/: __init__.py  agent_crud.py  config_crud.py  user_crud.py
backend/powerbeacon/models/: __init__.py  agents.py  clusters.py  config.py  devices.py  generic.py  links.py  users.py
backend/powerbeacon/routes/: agents.py  clusters.py  config.py  devices.py  login.py  setup.py  users.py
backend/powerbeacon/services/: agent_service.py  app_metadata.py  inventory_service.py  oidc.py  wake_service.py
docs/: DEVELOPMENT.md  pyproject.toml  zensical.toml
frontend/: .gitignore  Dockerfile  Dockerfile.dev  README.md  components.json  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+109 files in other folders)
